fix sonar code smell
Issue-ID: CPS-358
Change-Id: Ifa1f4bbd5c16a0cf6e4ac73568c8560e42b85365
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>